correcting too much nesting

--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -49,37 +49,35 @@
       }
     }
 
-    #form-login {
-      .form-group {
-        position: relative;
-        margin-bottom: 1.85rem;
+    #form-login .form-group {
+      position: relative;
+      margin-bottom: 1.85rem;
 
-        .form-control-feedback {
-          position: absolute;
-          right: 0;
-          bottom: -1.1rem;
-          font-size: ($font-size-base * .75);
-          text-align: right;
+      .form-control-feedback {
+        position: absolute;
+        right: 0;
+        bottom: -1.1rem;
+        font-size: ($font-size-base * .75);
+        text-align: right;
 
-          [dir=rtl] & {
-            right: auto;
-            left: 0;
-            text-align: left;
-          }
+        [dir=rtl] & {
+          right: auto;
+          left: 0;
+          text-align: left;
         }
+      }
 
-        .form-control-hint {
-          position: absolute;
-          top: .3rem;
-          right: 0;
-          font-size: ($font-size-base * .75);
-          text-align: right;
+      .form-control-hint {
+        position: absolute;
+        top: .3rem;
+        right: 0;
+        font-size: ($font-size-base * .75);
+        text-align: right;
 
-          [dir=rtl] & {
-            right: auto;
-            left: 0;
-            text-align: left;
-          }
+        [dir=rtl] & {
+          right: auto;
+          left: 0;
+          text-align: left;
         }
       }
     }
